tests/baselines/reference/parserErrorRecovery_ExtendsOrImplementsClause5.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ExtendsOrImplementsClauses/parserErrorRecovery_ExtendsOrImplementsClause5.ts (5 errors) ====
    class C extends A, implements B, {
                     ~
!!! error TS1005: '{' expected.
                                  ~
!!! error TS1005: ';' expected.
                    ~
!!! error TS2304: Cannot find name 'A'.
                       ~~~~~~~~~~
!!! error TS2304: Cannot find name 'implements'.
                                  ~
!!! error TS2304: Cannot find name 'B'.
    }